change color to midnight blue

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <title>WyrmTech</title>
     <style>
       * {
@@ -260,24 +261,24 @@
     </script>
     <a class="vecteezy-credit" href="https://www.vecteezy.com/free-vector/design" target="_blank" rel="noopener">Design Vectors by Vecteezy</a>
   </body>
-    <style>
-      .vecteezy-credit {
-        position: fixed;
-        right: 18px;
-        bottom: 12px;
-        font-size: 0.475rem;
-        color: #b0c4de;
-        background: rgba(0, 0, 0, 0.32);
-        padding: 4px 10px;
-        border-radius: 8px;
-        text-decoration: none;
-        z-index: 100;
-        font-family: inherit;
-        transition: color 0.2s, background 0.2s;
-      }
-      .vecteezy-credit:hover {
-        color: #fff;
-        background: #6699cc;
-      }
-    </style>
+  <style>
+    .vecteezy-credit {
+      position: fixed;
+      right: 18px;
+      bottom: 12px;
+      font-size: 0.475rem;
+      color: #b0c4de;
+      background: rgba(0, 0, 0, 0.32);
+      padding: 4px 10px;
+      border-radius: 8px;
+      text-decoration: none;
+      z-index: 100;
+      font-family: inherit;
+      transition: color 0.2s, background 0.2s;
+    }
+    .vecteezy-credit:hover {
+      color: #fff;
+      background: #6699cc;
+    }
+  </style>
 </html>
