--- a/ideas/original.html
+++ b/ideas/original.html
@@ -14,7 +14,8 @@
 
       body {
         height: 100vh;
-        background: linear-gradient(135deg, #0c0c0c 0%, #1a1a2e 50%, #16213e 100%);
+        background: linear-gradient(135deg, #003366 0%, #191970 100%);
+        /* Midnight blue gradient: #003366 (dark midnight), #191970 (midnight blue) */
         overflow: hidden;
         display: flex;
         justify-content: center;
@@ -52,8 +53,7 @@
     </style>
   </head>
   <body>
-    <!-- Shooting stars background -->
-    <div id="stars-bg"></div>
+    <div class="shooting-stars-bg"></div>
     <div class="dragon-bg">
       <!-- Dragon SVG background -->
       <!-- Dragon SVG background -->
@@ -155,106 +155,109 @@
       }
     </style>
     <style>
-      /* Falling stars and twinkle background */
-      #stars-bg {
+      /* Shooting stars background animation */
+      .shooting-stars-bg {
         position: fixed;
-        left: 0;
         top: 0;
+        left: 0;
         width: 100vw;
         height: 100vh;
         pointer-events: none;
-        z-index: 1;
+        z-index: 2;
+        overflow: hidden;
       }
-      .star {
+      .shooting-star {
         position: absolute;
-        background: white;
-        clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-        animation: fall linear infinite;
-      }
-      .star::before {
-        content: "";
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 100%;
-        height: 100%;
-        background: radial-gradient(circle, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.2) 70%, transparent 100%);
+        width: 2px;
+        height: 80px;
+        background: linear-gradient(180deg, #fff 0%, #fff 60%, transparent 100%);
+        opacity: 0.8;
         border-radius: 50%;
+        filter: blur(0.5px) brightness(1.5);
+        pointer-events: none;
+        z-index: 1;
+        animation: shootingStar 0.7s linear forwards;
       }
-      @keyframes fall {
+
+      .shooting-star.twinkle {
+        animation: shootingStar 0.7s linear forwards, starTwinkle 0.7s ease-in-out;
+      }
+
+      @keyframes starTwinkle {
         0% {
-          transform: translateY(-100vh) rotate(0deg);
+          filter: blur(0.5px) brightness(1.5);
+        }
+        20% {
+          filter: blur(0.5px) brightness(2.5);
+        }
+        40% {
+          filter: blur(0.5px) brightness(1.2);
+        }
+        60% {
+          filter: blur(0.5px) brightness(2.2);
+        }
+        100% {
+          filter: blur(0.5px) brightness(1.5);
+        }
+      }
+      @keyframes shootingStar {
+        0% {
           opacity: 0;
+          transform: translateY(0) scaleY(0.5);
         }
         10% {
           opacity: 1;
         }
-        90% {
+        80% {
           opacity: 1;
         }
         100% {
-          transform: translateY(100vh) rotate(360deg);
           opacity: 0;
-        }
-      }
-      .twinkle {
-        position: absolute;
-        background: white;
-        border-radius: 50%;
-        animation: twinkle 2s ease-in-out infinite;
-      }
-      @keyframes twinkle {
-        0%,
-        100% {
-          opacity: 0.3;
-          transform: scale(1);
-        }
-        50% {
-          opacity: 1;
-          transform: scale(1.2);
+          transform: translateY(100vh) scaleY(1.2);
         }
       }
     </style>
     <script>
-      function createStar() {
+      // Shooting stars animation
+      function randomBetween(a, b) {
+        return Math.random() * (b - a) + a;
+      }
+      function createShootingStar() {
+        const starsBg = document.querySelector(".shooting-stars-bg");
+        if (!starsBg) return;
         const star = document.createElement("div");
-        star.className = "star";
-        const size = Math.random() * 15 + 5;
-        star.style.width = size + "px";
-        star.style.height = size + "px";
-        star.style.left = Math.random() * window.innerWidth + "px";
-        star.style.animationDuration = Math.random() * 3 + 2 + "s";
-        star.style.animationDelay = Math.random() * 2 + "s";
-        const colors = ["#ffffff", "#87ceeb", "#ffd700", "#ff69b4", "#98fb98"];
-        star.style.background = colors[Math.floor(Math.random() * colors.length)];
-        document.getElementById("stars-bg").appendChild(star);
+        // 30% chance to twinkle
+        if (Math.random() < 0.3) {
+          star.className = "shooting-star twinkle";
+        } else {
+          star.className = "shooting-star";
+        }
+        // Randomize horizontal start position
+        const startX = randomBetween(0, 98); // vw
+        star.style.left = startX + "vw";
+        star.style.top = "-10vh";
+        star.style.bottom = "";
+        star.style.width = randomBetween(1, 2.5) + "px";
+        star.style.height = randomBetween(60, 120) + "px";
+        star.style.filter = "blur(" + randomBetween(0.2, 1.2) + "px) brightness(" + randomBetween(1.2, 2.2) + ")";
+        star.style.transform = "none";
+        starsBg.appendChild(star);
         setTimeout(() => {
           star.remove();
-        }, 8000);
+        }, 800);
       }
-      function createTwinkleStar() {
-        const twinkle = document.createElement("div");
-        twinkle.className = "twinkle";
-        const size = Math.random() * 3 + 1;
-        twinkle.style.width = size + "px";
-        twinkle.style.height = size + "px";
-        twinkle.style.left = Math.random() * window.innerWidth + "px";
-        twinkle.style.top = Math.random() * window.innerHeight + "px";
-        twinkle.style.animationDelay = Math.random() * 2 + "s";
-        document.getElementById("stars-bg").appendChild(twinkle);
-        setTimeout(() => {
-          twinkle.remove();
-        }, 6000);
+      // More stars at once
+      function shootingStarsLoop() {
+        // 1-3 stars per frame
+        const count = Math.floor(randomBetween(1, 4));
+        for (let i = 0; i < count; i++) {
+          setTimeout(createShootingStar, i * 80);
+        }
+        setTimeout(shootingStarsLoop, randomBetween(250, 700));
       }
-      // Create initial background stars
-      for (let i = 0; i < 50; i++) {
-        setTimeout(createTwinkleStar, Math.random() * 1000);
-      }
-      // Continuously create falling stars
-      setInterval(createStar, 300);
-      // Replenish twinkling background stars
-      setInterval(createTwinkleStar, 500);
+      window.addEventListener("DOMContentLoaded", () => {
+        shootingStarsLoop();
+      });
     </script>
     <a class="vecteezy-credit" href="https://www.vecteezy.com/free-vector/design" target="_blank" rel="noopener">Design Vectors by Vecteezy</a>
   </body>
